--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -16,7 +16,7 @@ jobs:
         run: |
           echo "$(date)" >> daily-log.txt
           git config --global user.name "GitHub Actions"
-          git config --global user.email "user@email.com"
+          git config --global user.email "23f2000237@ds.study.iitm.ac.in"
           git add daily-log.txt
           git commit -m "Automated commit on $(date)"
           git push
