--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Make Changes and Commit
+      - name: 23f2000237@ds.study.iitm.ac.in
         run: |
           echo "$(date)" >> daily-log.txt
           git config --global user.name "GitHub Actions"
